cholera 0.7.9.9008
==================

- add partitionStringGraph().


cholera 0.7.9.9007
==================

- add pointOverlap().


cholera 0.7.9.9006
==================

- add roadHighlight().


cholera 0.7.9.9005
==================

- add/set segmentLocator(cex.text = 0.67).


cholera 0.7.9.9004
==================

- add caseDistance().


cholera 0.7.9.9003
==================

- fix/change unitMeter(distance.unit = "native").


cholera 0.7.9.9002
==================

- add/use ortho.rect as polygon filter.
- add orthogonalRectanlge() and associated functions.
- use "id" instead of "id2" in rotatePoint(dataset = "roads").
- add partitionRoadEndpoints().
- add latlongRoads().


cholera 0.7.9.9001
==================

- add latlongCoordinatesC().


cholera 0.7.9.9000
==================

- add frame.data.


cholera 0.7.9
==================

# Note #

- an interim release to address code changes in 'deldir' v1.0-2.

# New Function #

- add streetNames().

# Data Change #

- amend oxford.weather data to include entire data set.

# Fixes #

- amend code for 'deldir' v1.0-2: addDelaunay().
- fix addSnow().
- fix pumpTokens() for plot.walking(type = "roads").

# Function Changes #

- add/set addPump(cex = 1).
- add/set segmentHighlight(col = "red").
- add/set plot.oxfordWeather(month = "september").
- amend plot.oxfordWeather(statistic = "rain").
- change addDelauny() to addDelaunay().
- change type = "road" to "roads" in plot.walking().
- "gray" out unobserved and unselected pumps in pumpTokens().


cholera 0.7.5.9018
==================

- fix addSnow().


cholera 0.7.5.9017
==================

- fix typo: Delauny to Delaunay.
- amend code for 'deldir' v1.0-2.


cholera 0.7.5.9016
==================

- use orthogonal frame rectangle to filter out map "shadow".
- fix/simplify rectangle indices (point clouds)


cholera 0.7.5.9015
==================

- estimate coordinates in latlongCoordinatesB() assuming strong rectangle symmetry.
- migrate to pch = 46.

