@@ -88,6 +88,7 @@ export(neighborhoodData)
 export(neighborhoodEuclidean)
 export(neighborhoodVoronoi)
 export(neighborhoodWalking)
+export(openTriads)
 export(orthogonalProjection)
 export(orthogonalRectanlge)
 export(orthogonalRectanlgePDF)
@@ -133,6 +134,7 @@ export(subsetFramePDF)
 export(subsetPDF)
 export(subsetRoadsPDF)
 export(subsetRoadsSamples)
+export(thresholdAddressGraph)
 export(timeSeries)
 export(unitMeter)
 export(unstackFatalities)
