@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/partitionAddress.R
+% Please edit documentation in R/partitionAddresses.R
 \name{partitionStringGraph}
 \alias{partitionStringGraph}
 \title{Partition string-of-pearl fatality address graphs.}
