@@ -2,6 +2,8 @@ cholera 0.7.9.9008
 ==================
 
 - add partitionStringGraph().
+- add thresholdAddressGraph().
+- add openTriads().
 
 
 cholera 0.7.9.9007
